# server/gen/api/open-api/search.swagger.json
@@ -254,8 +254,9 @@
         "notable": {
           "type": "boolean"
         },
-        "contributor": {
-          "type": "string"
+        "offsetSec": {
+          "type": "string",
+          "format": "int64"
         }
       }
     },
@@ -323,6 +324,9 @@
           "items": {
             "type": "string"
           }
+        },
+        "incomplete": {
+          "type": "boolean"
         }
       }
     },
